# PalsyVideoTraining

./: .env.example  .gitignore  AndroidManifest.template.xml  Caddyfile  ClientClassesUnit1.pas  ClientClassesUnit2.pas  ClientClassesUnit3.pas  ClientModuleUnit1.dfm  ClientModuleUnit2.dfm  ClientModuleUnit3.dfm  ClientModuleUnit3.pas  MyApp.ini  Project10.deployproj  Project10.dpr  Project10.dproj  Project10.dproj.local  Project10.identcache  Project10.res  Project10Resource.rc  Project11.dpr  Project11.dproj  Project11.res  Project12.dpr  Project12.dproj  Project12.res  Project13.dpr  Project13.dproj  Project13.res  ProjectGroup1.groupproj  README.md  ServerContainerUnit1.dfm  ServerContainerUnit1.pas  ServerMethodsUnit1.pas  Unit1.LgXhdpiPh.fmx  Unit1.fmx  Unit1.pas  Unit12.LgXhdpiPh.fmx  Unit12.fmx  Unit12.pas  Unit13.fmx  (+7 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20240919_000001_initial_schema.py  20240919_01_initial_schema.py  20240919_01_initial_schema.sql  20241005_01_add_doctor_login_password.py  20241005_add_doc_credentials.py  20241007_seed_klinikanz_doctor.py  20241009_add_video_metadata_fields.py  20241010_add_video_storage_columns.py
backend/app/: config.py  database.py  main.py
backend/app/core/: config.py  media.py
backend/app/db/: session.py
backend/app/models/: __init__.py  appointments.py  disorder_videos.py  disorders.py  doctors.py  patient_disorders.py  patients.py  push_count.py  rules.py  (+1 more)
backend/tests/: test_health.py
(+32 files in other folders)
