[project]
name = "palsy-backend"
version = "0.1.0"
description = "FastAPI backend for Palsy Video Training"
authors = [{name = "PalsyVideoTraining"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic-settings",
    "python-dotenv",
    "psycopg[binary]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
